@@ -1,0 +1,8 @@
+*
+!.gitignore
+!peru.yaml
+!ansible.hosts
+!up.bash
+!up.playbooks
+!up.guidance
+!push.bash
